--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nft-Preview-Card-Component-Main</title>
+    <title>Frontend Mentor | NFT preview card component</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <!-- Main CSS Link -->
@@ -16,9 +16,9 @@
 <body>
     <div id="main">
         <div id="pic">
-            <img src="./images/image-equilibrium.jpg" alt="" id="img1">
+            <img src="./images/image-equilibrium.jpg" alt="image-equilibrium" id="img1">
             <div id="pic1">
-                <img src="./images/icon-view.svg" alt="" id="img2">
+                <img src="./images/icon-view.svg" alt="icon-view" id="img2">
             </div>
         </div>
 
@@ -31,12 +31,12 @@
 
         <div id="balance">
             <div>
-                <img src="./images/icon-ethereum.svg" alt="" >
+                <img src="./images/icon-ethereum.svg" alt="icon-ethereum">
                 <span id="top_left"> 0.041 ETH</span>
             </div>
 
             <div>
-                <img src="./images/icon-clock.svg" alt="">
+                <img src="./images/icon-clock.svg" alt="icon-clock">
                 <span id="top_right">3 days left</span>
             </div>
         </div>
@@ -45,7 +45,7 @@
         
         <div id="bottom">
             <div>
-                <img src="./images/image-avatar.png" alt="" id="image">
+                <img src="./images/image-avatar.png" alt="image-avatar" id="image">
             </div>
             
             <div>
@@ -53,6 +53,11 @@
                 <span id="bottom_right">Jules Wyvern</span>
             </div>          
         </div>
+    </div>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Moyinoluwa Adelowo</a>.
     </div>
 </body>
 </html>
